--- a/src/Component/ball/Ball.css
+++ b/src/Component/ball/Ball.css
@@ -2,11 +2,25 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
+    border-left: 5px solid #001c46;
+    border-right: 5px solid #001c46;
     background-color: #0d6efd;
     position: absolute;
     animation: moveStartToEndAndThenEndToStart 8s linear infinite;
 }
+.ball:first-child{
+    animation-delay: 0s;
+}
+.ball:nth-child(2){
+    animation-delay: 2s;
+}
 
+@keyframes moveStartToEndAndThenEndToStart {
+    0% {
+        transform: translateX(0);
+    }
+}
+.ball:last-child{}
 span {
     color: rgba(165, 42, 42, 0.493);
     padding: 5px;
@@ -36,7 +50,6 @@ h2 {
     margin-bottom: 10px;
 }
 @keyframes moveStartToEndAndThenEndToStart {
-
     0%,
     100% {
         left: 0;
@@ -44,5 +57,18 @@ h2 {
 
     50% {
         left: calc(100% - 20px);
+        transform: rotate(360deg);
+    }
+}
+@media screen and (min-width: 600px) {
+    .ball {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        border-left: 5px solid #001c46;
+        border-right: 5px solid #001c46;
+        background-color: #0d6efd;
+        position: absolute;
+        animation: moveStartToEndAndThenEndToStart 10s linear infinite;
     }
 }
